[review][docs][tutorial] address review comments

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial: Nash-Sutcliffe Efficiency (NSE) Calculation\n",
-    "In this tutorial, we will explore the Nash-Sutcliffe Efficiency (NSE) calculation function `scores.continuous.nse`.\n",
+    "# Nash-Sutcliffe Efficiency (NSE)\n",
+    "In this tutorial, we will calculate the Nash-Sutcliffe Efficiency (NSE) coefficient using the function `scores.continuous.nse`.\n",
     "\n",
     "NSE is a widely used metric in hydrology and other fields to evaluate the performance of a model by comparing its predictions to observed data.\n",
     "\n",
-    "#### Definition\n",
+    "## Definition\n",
     "\n",
     "The Nash-Sutcliffe Efficiency (NSE) is defined as:\n",
     "\n",
@@ -25,19 +25,19 @@
     "- $f_i$ is the forecast or predicted value\n",
     "- $o_i$ is the observed value\n",
     "- $\\bar{o}$ is the mean of the observed values\n",
-    "- $\\sigma_{\\large{o^2}}$ and $\\sigma_{\\large{{o_w}^2}}$ are the unweighted and weighted obs variance respectively\n",
+    "- $\\sigma_{\\large{o}}^2$ and $\\sigma_{\\large{o_w}}^2$ are the unweighted and weighted obs variance respectively\n",
     "- $n$ is the number of data points\n",
     "- $w$ is an optional weighting that can be associated to the error terms, where $\\forall i \\ : \\ 0 \\leq w_i\\ , \\ \\text{and there exists at least one}\\ \\  i \\ : \\ 0 \\lt w_i$  (specifiable using `weights` option)\n",
     "- $\\small\\text{MWSE}$ is the mean of the weighted square errors\n",
     "  - CAUTION: not to be confused with $\\small\\text{WMSE}$:\n",
     "    - $\\small\\text{WMSE}$ is a _\"weighted mean\"_ of _\"unweighted\"_ error terms.<br>\n",
     "    - On the other hand, $\\small\\text{MWSE}$ is a _\"unweighted mean\"_ of _\"weighted\"_ error terms.<br>\n",
-    "    - The distinction is subtle, but essentially: $\\small\\text{WMSE}$ treats 0 weights as data to _exclude_ and additional requires that the _weights sum to 1_<br>\n",
-    "    - whereas $\\small\\text{MWSE}$ (what `scores` does), treats 0 weights as data that is _zero forced_ and has no constraints on the upper bound of the _weights_ (at the time of writing).\n",
+    "    - The distinction is subtle, essentially: $\\small\\text{WMSE}$ treats 0 weights as data to *exclude*; additionally it requires that the _weights sum to 1_<br>\n",
+    "    - whereas $\\small\\text{MWSE}$ (what `scores` does), treats 0 weights as data that is *zero forced* and has no constraints on the upper bound of the *weights* (at the time of writing).\n",
     "    - incidentally $\\small\\text{MWSE}$ is also what is needed to compute a \"weighted\" NSE ($\\small\\text{wNSE}$)\n",
-    "  - NOTE: while its important to be aware of this, for `nse` in particular, this distinction is _minor_:<br>\n",
+    "  - NOTE: while its important to be aware of this, for `nse` in particular, this distinction is *minor*:<br>\n",
     "    - both the denominator (observation variance) and the numerator (forecast error) have the same weight for any given element\n",
-    "    - Because of this, any scaling/normalization factor is cancelled out.\n",
+    "    - Because of this, any scaling/normalisation factor is cancelled out.\n",
     "- $\\small\\text{MSE}$ is the special case where _all the weights are 1_; and $\\small\\text{MWSE}$ reduces to the mean square error.\n",
     "\n",
     "> _**Note**_\n",
@@ -46,7 +46,7 @@
     "> \n",
     "> $\\vec{i} \\in \\{ \\left(\\ i_0,\\ i_1,\\ ...\\ \\right) :\\  0\\leq i_0 \\lt N_0;\\ 0\\leq i_1 \\lt N_1; \\ ...\\ \\}$\n",
     ">\n",
-    "> If one wishes to accumulate the NSE scores over multiple indices, the `reduce_dims` and `preserve_dims` can be used (similar to other scores)\n",
+    "> If one wishes to accumulate the NSE scores over multiple indices, the `reduce_dims` and `preserve_dims` arguments can be used (similar to other scores)\n",
     "\n",
     "A perfect model has an NSE value of 1, while a model performing as poorly as the mean of the observed data has an NSE value of 0 or less.\n",
     "\n",
@@ -54,21 +54,17 @@
     "\n",
     "> _**Note**_\n",
     "> \n",
-    "> The image (co-domain) of $R^2 : (x, x_\\text{fit}) \\rightarrow \\text{score}$ does not necessarily need to be constrained to $[0, 1]$. It's just that a linear least squares optimization makes it impossible for a fit to do worse than the mean.\n",
+    "> The image (co-domain) of $R^2 : (x, x_\\text{fit}) \\rightarrow \\text{score}$ does not necessarily need to be constrained to $[0, 1]$. It's just that a linear least squares optimisation makes it impossible for a fit to do worse than the mean.\n",
     ">\n",
-    "> Analysis usign NSE explicitly doesn't pose such restrictions. Its more akin to the signal to noise ratio in this sense, in fact\n",
+    "> Analysis using NSE explicitly doesn't pose such restrictions. Its more akin to the signal to noise ratio in this sense, in fact\n",
     ">\n",
-    "> $  \\text{SNR} \\Large = \\frac{E[{O^2}]}{E[\\xi_\\text{model}^2]} = \\frac{\\sigma_{o}^2}{\\text{MSE}} = \\frac{1}{1 - NSE} $\n",
+    "> $\\text{SNR} \\Large = \\frac{E[{O^2}]}{E[\\xi_\\text{model}^2]} = \\frac{\\sigma_{o}^2}{\\text{MSE}} = \\frac{1}{1 - NSE}$\n",
     "> \n",
     "> Where, $O$ is the observed process (\"signal\"), and $\\xi_\\text{model}$ is the error of the modelled predictions/forecasts/simulations (\"noise\")\n",
     "\n",
-    "**References:**\n",
-    "1. Nash, J. E., & Sutcliffe, J. V. (1970). River flow forecasting through conceptual models part I — A discussion of principles.\n",
-    "   Journal of Hydrology (Vol. 10, Issue 3, pp. 282–290). Elsevier BV.<br>\n",
-    "   _doi:10.1016/0022-1694(70)90255-6_\n",
-    "2. Hundecha, Y., & Bárdossy, A. (2004). Modeling of the effect of land use changes on the runoff generation of a river basin through parameter regionalization of a watershed model.\n",
-    "   Journal of Hydrology, 292(1-4), 281-295.<br>\n",
-    "   _doi:10.1016/j.jhydrol.2004.01.002_\n",
+    "## References\n",
+    "1. Nash, J. E., & Sutcliffe, J. V. (1970). River flow forecasting through conceptual models part I — A discussion of principles. Journal of Hydrology, 10(3), 282–290. https://doi.org/10.1016/0022-1694(70)90255-6 <br>\n",
+    "2. Hundecha, Y., & Bárdossy, A. (2004). Modeling of the effect of land use changes on the runoff generation of a river basin through parameter regionalization of a watershed model. Journal of Hydrology, 292(1–4), 281–295. https://doi.org/10.1016/j.jhydrol.2004.01.002 <br>\n",
     "\n",
     "\n",
     "## Using the `nse` Function\n",
@@ -94,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 1**: Xarray DataArray"
+    "### Example 1: Xarray DataArray"
    ]
   },
   {
@@ -122,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 2**: Large Xarray DataArrays"
+    "### Example 2: Large Xarray DataArrays"
    ]
   },
   {
@@ -159,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 3**: Angular and array"
+    "### Example 3: Angular and array"
    ]
   },
   {
@@ -187,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 4**: Weight and array"
+    "### Example 4: Weight and array"
    ]
   },
   {
@@ -216,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 5**: 2D Array: time and station"
+    "### Example 5: 2D Array: time and station"
    ]
   },
   {
@@ -280,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 6**: 3D Array: Ensemble, Station and Time"
+    "### Example 6: 3D Array: Ensemble, Station and Time"
    ]
   },
   {
@@ -371,9 +367,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Warning: Divide by zero**\n",
+    "#### Warning: Divide by zero\n",
     "\n",
-    "Note that we got a divide by zero warning. This is _expected_ since for each `(ensemble, time)` the value is the _same_. Recall that the NSE has the observation variance as the denominator. If the obs values are the same this implies that the variance is zero, we'd then have $\\text{NSE} = 1 - \\frac{\\text{fcst\\_error}}{0} = 1 - \\infty = -\\infty$. Usually the data isn't this contrived and we may still want to use the partial results - despite the ocassional divide by zero. To facilitate this, a warning is thrown instead of an error."
+    "Note that we got a divide by zero warning. This is *expected* since for each `(ensemble, time)` the value is the *same*. Recall that the NSE has the observation variance as the denominator. If the obs values are the same this implies that the variance is zero, we'd then have $\\text{NSE} = 1 - \\frac{\\text{fcst\\_error}}{0} = 1 - \\infty = -\\infty$. Usually the data isn't this contrived and we may still want to use the partial results - despite the ocassional divide by zero. To facilitate this, a warning is thrown instead of an error."
    ]
   },
   {
@@ -792,7 +788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 7**: 3D Array: Time, Station and lead times"
+    "### Example 7: 3D Array: Time, Station and lead times"
    ]
   },
   {
@@ -872,7 +868,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NSE Calculation along Lead time**\n",
+    "#### NSE Calculation along Lead time\n",
     "\n",
     "So far we've been only passing a string to `reduce_dims`, as mentioned in the introduction of this tutorial, the indexers can span multiple dimensions. Suppose we would like to find NSE for each lead time, we simply need to pass `reduce_dims=(\"station\", \"time\")` alternatively, `preserve_dims=\"lead_time\"` should also work. Before doing so, we need to broadcast the two arrays prior to computations. Normally, this will happen automatically - but fill it with NaNs when broadcasted."
    ]
@@ -977,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Proper broadcasting**\n",
+    "#### Proper broadcasting\n",
     "\n",
     "The reason this happens is because of the strict coordinate defintions. To circumvent this we actually need to use numpy's broadcast method, so that we are dealing with an attribute-less data-array. Since `nse` relies on `mse` for performing any computations under-the-hood, where the latter relies on using `xarray` for computational API calls rather than `numpy`. If we do want to mimic `numpy`'s method we just have to use `numpy` to call broadcast instead.\n",
     "\n",
@@ -1152,7 +1148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Is `nse` causing the quirky broadcasting or is it `mse`??** _(spoiler: **neither**)_\n",
+    "#### Is `nse` causing the quirky broadcasting or is it `mse`??** _(spoiler: **neither**)_\n",
     "\n",
     "As mentioned `nse` uses `mse` under the hood for consistency. We can show that this broadcasting behaviour is not unique to `nse` by replacing those operations with `mse`.\n",
     "\n",
@@ -1254,7 +1250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 8**: 4D Array: Time, Station, lead times and ensemble\n",
+    "### Example 8: 4D Array: Time, Station, lead times and ensemble\n",
     "\n",
     "The following example shows NSE computed on ensemble forecasts that are synthetically generated. We would still hit the broadcasting issue above, since the observed data will not match the dimensions of the ensembles and to compute the scores we want to use `numpy`'s style of replicating data. This example deals with this by looping through the ensembles, iteratively computing NSE for each ensemble to avoid memory bloat. Broadcasted operations will then apply to any remaining dimensions that match in size between obs and fcst."
    ]
@@ -1408,12 +1404,12 @@
     "## Other things to try\n",
     "\n",
     "Note there are extensions to NSE that are useful for different applications, see: https://en.wikipedia.org/wiki/Nash%E2%80%93Sutcliffe_model_efficiency_coefficient\n",
-    "- In particular the use of `weights` allows the user to calculate `wNSE` - this is typically scaled by the `obs` itself. see: Hundecha, Y., & Bárdossy, A. (2004)\n",
+    "- In particular the use of `weights` allows the user to calculate `wNSE` - this is typically scaled by the `obs` itself. See: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002)\n",
     "- `weights` can also be used as \"selectors\" by specifying binary values, where 1 values are selected and `np.nan`s are excluded. This is useful for slicing hydrographs by their observation values and accumulating over the resultant extents.\n",
-    "- `NNSE` a variant of NSE that works with machine learning optimization functions\n",
-    "- `LNSE` logarithmic processing of observation and forecasts _prior_ to computing NSE for better representation of smaller values.\n",
+    "- `NNSE` a variant of NSE that works with machine learning optimisation functions\n",
+    "- `LNSE` logarithmic processing of observation and forecasts *prior* to computing NSE for better representation of smaller values.\n",
     "\n",
-    "most of the above can be done via a"
+    "most of the above can be done via by preprocessing the observations/forecast, adapting the final score or scaling by the `weights` input argument"
    ]
   },
   {
