[tutorial][docs][review] address review comments

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -15,44 +15,52 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "\\large{\\text{NSE}} &= 1 - \\large\\frac{\\large\\sum_{i=1}^{n}w_i.(f_i - o_i)^2}{\\large\\sum_{i=1}^{n}w_i.(o_i - \\bar{o})^2} \\\\ \n",
-    "                   &= 1 - \\large\\frac{\\text{MWSE}}{\\sigma_{o_w}^2} &&- \\text{weighted} \\\\\n",
-    "                   &= 1 - \\large\\frac{\\text{MSE}}{\\sigma_{o}^2} &&- \\text{unweighted - i.e.} \\ w_i = 1 , \\forall\\ i\n",
+    "\\large{\\text{NSE}} &= 1 - \\large\\frac{\\large\\sum_{i=1}^{n}(f_i - o_i)^2}{\\large\\sum_{i=1}^{n}(o_i - \\bar{o})^2} \\\\ \n",
+    "                     &= 1 - \\large\\frac{\\text{MSE}}{\\sigma_{o}^2} \\\\ \n",
     "\\end{align*}\n",
     "$$\n",
-    "\n",
-    "Where:\n",
+    "<br>Where:\n",
     "- $f_i$ is the forecast or predicted value\n",
     "- $o_i$ is the observed value\n",
     "- $\\bar{o}$ is the mean of the observed values\n",
-    "- $\\sigma_{\\large{o}}^2$ and $\\sigma_{\\large{o_w}}^2$ are the unweighted and weighted obs variance respectively\n",
     "- $n$ is the number of data points\n",
-    "- $w$ is an optional weighting that can be associated to the error terms, where $\\forall i \\ : \\ 0 \\leq w_i\\ , \\ \\text{and there exists at least one}\\ \\  i \\ : \\ 0 \\lt w_i$  (specifiable using `weights` option)\n",
-    "- $\\small\\text{MWSE}$ is the mean of the weighted square errors\n",
-    "  - CAUTION: not to be confused with $\\small\\text{WMSE}$:\n",
-    "    - $\\small\\text{WMSE}$ is a _\"weighted mean\"_ of _\"unweighted\"_ error terms.<br>\n",
-    "    - On the other hand, $\\small\\text{MWSE}$ is a _\"unweighted mean\"_ of _\"weighted\"_ error terms.<br>\n",
-    "    - The distinction is subtle, essentially: $\\small\\text{WMSE}$ treats 0 weights as data to *exclude*; additionally it requires that the _weights sum to 1_<br>\n",
-    "    - whereas $\\small\\text{MWSE}$ (what `scores` does), treats 0 weights as data that is *zero forced* and has no constraints on the upper bound of the *weights* (at the time of writing).\n",
-    "    - incidentally $\\small\\text{MWSE}$ is also what is needed to compute a \"weighted\" NSE ($\\small\\text{wNSE}$)\n",
-    "  - NOTE: while its important to be aware of this, for `nse` in particular, this distinction is *minor*:<br>\n",
-    "    - both the denominator (observation variance) and the numerator (forecast error) have the same weight for any given element\n",
-    "    - Because of this, any scaling/normalisation factor is cancelled out.\n",
-    "- $\\small\\text{MSE}$ is the special case where _all the weights are 1_; and $\\small\\text{MWSE}$ reduces to the mean square error.\n",
+    "- $\\sigma_{\\large{o}}^2$ is the un-weighted observation variance.",
+    "- MSE is the mean-squared error, equivilent to the `scores` function: `scores.continuous.mse`",
     "\n",
-    "> _**Note**_\n",
-    "> \n",
-    "> while $i$ above is shown as a integer index from 0 to n, its definition can be abstracted to any _multi-index_ i.e.\n",
-    "> \n",
-    "> $\\vec{i} \\in \\{ \\left(\\ i_0,\\ i_1,\\ ...\\ \\right) :\\  0\\leq i_0 \\lt N_0;\\ 0\\leq i_1 \\lt N_1; \\ ...\\ \\}$\n",
-    ">\n",
-    "> If one wishes to accumulate the NSE scores over multiple indices, the `reduce_dims` and `preserve_dims` arguments can be used (similar to other scores)\n",
+    "\n",
+    "<br>Scores also supports the use of `weights`. These can be used to scale both the individiual forecast error in the numerator and the deviation from the observation mean in the denominator. This is also known as the weighted-NSE or wNSE (for an application of this, see: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002))\n<br>",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\large{\\text{wNSE}} &= 1 - \\large\\frac{\\large\\sum_{i=1}^{n}w_i.(f_i - o_i)^2}{\\large\\sum_{i=1}^{n}w_i.(o_i - \\bar{o})^2} \\\\ \n",
+    "                      &= 1 - \\large\\frac{\\text{MWSE}}{\\sigma_{o_w}^2} \\\\ \n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "<br>Where:\n",
+    "- $\\sigma_{\\large{o_w}}^2$ is the weighted obs variance.\n",
+    "- The weights must be non-negative: $\\forall i \\ : \\ 0 \\leq w_i\\ , \\ \\text{and there exists at least one}\\ \\  i \\ : \\ 0 \\lt w_i$  (specifiable using `weights` option)\n",
+    "- $\\small\\text{MWSE}$ is the mean of the weighted square errors - again this is also equivilent to `scores.continuous.mse`, if using the weights argument\n",
+    "\n",
+    " > **caution:** do not to be confuse $\\small\\text{MWSE}$ (scores) with $\\small\\text{WMSE}$ (weighted mean square errror):\n",
+    " > - $\\small\\text{WMSE}$ is a _\"weighted mean\"_ of _\"unweighted\"_ error terms.<br>\n",
+    " > - On the other hand, $\\small\\text{MWSE}$ is a _\"unweighted mean\"_ of _\"weighted\"_ error terms.<br>\n",
+    " > - The distinction is subtle, essentially: $\\small\\text{WMSE}$ treats 0 weights as data to *exclude*; additionally it requires that the *weights sum to 1*\n",
+    " > - whereas $\\small\\text{MWSE}$ (what `scores` does), treats 0 weights as data that is *zero forced* and has no constraints on the upper bound of the *weights* (at the time of writing).\n",
+    " > - incidentally $\\small\\text{MWSE}$ is also what is needed to compute a \"weighted\" NSE ($\\small\\text{wNSE}$)\n",
+    "\n",
+    "Further, while $i$ above is shown as a integer index from 0 to n, its definition can be abstracted to any _multi-index_ i.e.\n",
+    "\n",
+    "$\\vec{i} \\in \\{ \\left(\\ i_0,\\ i_1,\\ ...\\ \\right) :\\  0\\leq i_0 \\lt N_0;\\ 0\\leq i_1 \\lt N_1; \\ ...\\ \\}$\n",
+    "\n",
+    "If one wishes to accumulate the NSE scores over multiple indices, the `reduce_dims` and `preserve_dims` arguments can be used (similar to other scores)\n",
+    "\n",
+    "## Interpretation\n",
     "\n",
     "A perfect model has an NSE value of 1, while a model performing as poorly as the mean of the observed data has an NSE value of 0 or less.\n",
     "\n",
     "In hydrological modeling, the Nash–Sutcliffe Efficiency (NSE) is essential for assessing model performance. An NSE of 1 indicates perfect prediction, while 0 suggests the model performs as well as predicting the mean of the data. Negative values imply the observed mean is a better predictor. NSE values closer to 1 denote superior predictive ability. In regression analyses, NSE parallels the coefficient of determination (R²), representing model fit on a scale from 0 to 1.\n",
     "\n",
-    "> _**Note**_\n",
+    "> **Note:**\n",
     "> \n",
     "> The image (co-domain) of $R^2 : (x, x_\\text{fit}) \\rightarrow \\text{score}$ does not necessarily need to be constrained to $[0, 1]$. It's just that a linear least squares optimisation makes it impossible for a fit to do worse than the mean.\n",
     ">\n",
@@ -367,9 +375,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Warning: Divide by zero\n",
-    "\n",
-    "Note that we got a divide by zero warning. This is *expected* since for each `(ensemble, time)` the value is the *same*. Recall that the NSE has the observation variance as the denominator. If the obs values are the same this implies that the variance is zero, we'd then have $\\text{NSE} = 1 - \\frac{\\text{fcst\\_error}}{0} = 1 - \\infty = -\\infty$. Usually the data isn't this contrived and we may still want to use the partial results - despite the ocassional divide by zero. To facilitate this, a warning is thrown instead of an error."
+    "> **divide by zero warning:**\n",
+    "> We got a divide by zero warning. This is *expected* since for each `(ensemble, time)` the value is the *same*. Recall that the NSE has the observation variance as the denominator. If the obs values are the same this implies that the variance is zero, we'd then have $\\text{NSE} = 1 - \\frac{\\text{fcst\\_error}}{0} = 1 - \\infty = -\\infty$. Usually the data isn't this contrived and we may still want to use the partial results - despite the ocassional divide by zero. To facilitate this, a warning is thrown instead of an error.\n"
    ]
   },
   {
@@ -977,11 +984,11 @@
     "\n",
     "The reason this happens is because of the strict coordinate defintions. To circumvent this we actually need to use numpy's broadcast method, so that we are dealing with an attribute-less data-array. Since `nse` relies on `mse` for performing any computations under-the-hood, where the latter relies on using `xarray` for computational API calls rather than `numpy`. If we do want to mimic `numpy`'s method we just have to use `numpy` to call broadcast instead.\n",
     "\n",
-    "> **Caution**\n",
+    "> **Caution:**\n",
     ">\n",
     "> Using numpy for broadcasting will almost certainly load everything to memory. However, unlike `xarray` which relies on merge strategies, numpy basically repeats data if the dimensions are compatible.\n",
     ">\n",
-    "> In any case - broadcasting is not always trivial - especially for large datasets, and `nse` (and by extension `mse`) in particular do not guarentee broadcasted operations, instead they trim the operations to coordinates that are compatible"
+    "> In any case - broadcasting is not always trivial - especially for large datasets, and `nse` (and by extension `mse`) in particular do not guarentee broadcasted operations, instead they trim the operations to coordinates that are compatible\n"
    ]
   },
   {
@@ -1148,7 +1155,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Is `nse` causing the quirky broadcasting or is it `mse`??** _(spoiler: **neither**)_\n",
+    "#### Is `nse` causing the quirky broadcasting or is it `mse`??\n",
+    "\n",
+    "_(spoiler: neither)_\n",
     "\n",
     "As mentioned `nse` uses `mse` under the hood for consistency. We can show that this broadcasting behaviour is not unique to `nse` by replacing those operations with `mse`.\n",
     "\n",
@@ -1387,9 +1396,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise for the reader**: The above can also be done using `xarrays`'s `map_blocks` or `apply_ufunc` methods - which may reduce the load on memory further by using chunks more efficiently.\n",
+    "### Exercise for the reader\n",
     "\n",
-    "> Note that dask should not be the first solution and a simple loop like above may usually accomplish things sufficiently (and explicitly) - even for very large datasets - noting that xarray/netcdf4 loads data lazily with or without dask. `dask` on the other hand is useful when dealing with distributed compute and storage.\n",
+    "The above can also be done using `xarrays`'s `map_blocks` or `apply_ufunc` methods - which may reduce the load on memory further by using `dask` to partition and compute chunks more efficiently.\n",
+    "\n",
+    "> **Note:** that dask should not be the first solution and a simple loop like above may usually accomplish things sufficiently (and explicitly) - even for very large datasets - noting that xarray/netcdf4 loads data lazily with or without dask. `dask` on the other hand is useful when dealing with distributed compute and storage.\n",
     ">\n",
     "> Fore more info see:\n",
     "> - *dask guidelines* - in particular section on start small: https://docs.dask.org/en/stable/best-practices.html#start-small\n",
@@ -1403,23 +1414,16 @@
    "source": [
     "## Other things to try\n",
     "\n",
-    "Note there are extensions to NSE that are useful for different applications, see: https://en.wikipedia.org/wiki/Nash%E2%80%93Sutcliffe_model_efficiency_coefficient\n",
-    "- In particular the use of `weights` allows the user to calculate `wNSE` - this is typically scaled by the `obs` itself. See: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002)\n",
-    "- `weights` can also be used as \"selectors\" by specifying binary values, where 1 values are selected and `np.nan`s are excluded. This is useful for slicing hydrographs by their observation values and accumulating over the resultant extents.\n",
+    "There are several variants of NSE that are useful for particular applications, see: https://en.wikipedia.org/wiki/Nash%E2%80%93Sutcliffe_model_efficiency_coefficient\n",
+    "- Scores currently supports the use of `weights`. This allows the user to calculate `wNSE`, which is typically scaled by the `obs` itself. See: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002).\n",
+    "- `weights` can also be used as \"selectors\" by specifying binary values (in this case `1 => include datum` or `np.nan => exclude datum`. This is useful for slicing hydrographs by their observation values and accumulating over the resultant extents.\n",
     "- `NNSE` a variant of NSE that works with machine learning optimisation functions\n",
     "- `LNSE` logarithmic processing of observation and forecasts *prior* to computing NSE for better representation of smaller values.\n",
     "\n",
-    "most of the above can be done via by preprocessing the observations/forecast, adapting the final score or scaling by the `weights` input argument"
+    "Most of the above can be done via by preprocessing the observations/forecast, adapting the final score or scaling by the `weights` input argument."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
- ],
+],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
