[tutorial][docs][review] address review comments

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -24,11 +24,11 @@
     "- $o_i$ is the observed value\n",
     "- $\\bar{o}$ is the mean of the observed values\n",
     "- $n$ is the number of data points\n",
-    "- $\\sigma_{\\large{o}}^2$ is the un-weighted observation variance.",
-    "- MSE is the mean-squared error, equivilent to the `scores` function: `scores.continuous.mse`",
+    "- $\\sigma_{\\large{o}}^2$ is the un-weighted observation variance\n",
+    "- MSE is the mean-squared error, equivilent to the `scores` function: `scores.continuous.mse`\n",
     "\n",
     "\n",
-    "<br>Scores also supports the use of `weights`. These can be used to scale both the individiual forecast error in the numerator and the deviation from the observation mean in the denominator. This is also known as the weighted-NSE or wNSE (for an application of this, see: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002))\n<br>",
+    "Scores also supports the use of `weights`. These can be used to scale both the individual forecast error in the numerator and the deviation from the observation mean in the denominator. This is also known as the weighted-NSE or wNSE (for an application of this, see: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002)).\n<br>",
     "$$\n",
     "\\begin{align*}\n",
     "\\large{\\text{wNSE}} &= 1 - \\large\\frac{\\large\\sum_{i=1}^{n}w_i.(f_i - o_i)^2}{\\large\\sum_{i=1}^{n}w_i.(o_i - \\bar{o})^2} \\\\ \n",
@@ -37,22 +37,23 @@
     "$$\n",
     "\n",
     "<br>Where:\n",
-    "- $\\sigma_{\\large{o_w}}^2$ is the weighted obs variance.\n",
+    "- $\vec{w} = (w_0, w_1,..., w_n)$ are the weights for each index $i$\n",
     "- The weights must be non-negative: $\\forall i \\ : \\ 0 \\leq w_i\\ , \\ \\text{and there exists at least one}\\ \\  i \\ : \\ 0 \\lt w_i$  (specifiable using `weights` option)\n",
+    "- $\\sigma_{\\large{o_w}}^2$ is the weighted obs variance\n",
     "- $\\small\\text{MWSE}$ is the mean of the weighted square errors - again this is also equivilent to `scores.continuous.mse`, if using the weights argument\n",
     "\n",
-    " > **caution:** do not to be confuse $\\small\\text{MWSE}$ (scores) with $\\small\\text{WMSE}$ (weighted mean square errror):\n",
+    " > **caution:** $\\small\\text{MWSE}$ (scores) should not be confused with $\\small\\text{WMSE}$ (weighted mean square errror):\n",
     " > - $\\small\\text{WMSE}$ is a _\"weighted mean\"_ of _\"unweighted\"_ error terms.<br>\n",
     " > - On the other hand, $\\small\\text{MWSE}$ is a _\"unweighted mean\"_ of _\"weighted\"_ error terms.<br>\n",
-    " > - The distinction is subtle, essentially: $\\small\\text{WMSE}$ treats 0 weights as data to *exclude*; additionally it requires that the *weights sum to 1*\n",
-    " > - whereas $\\small\\text{MWSE}$ (what `scores` does), treats 0 weights as data that is *zero forced* and has no constraints on the upper bound of the *weights* (at the time of writing).\n",
-    " > - incidentally $\\small\\text{MWSE}$ is also what is needed to compute a \"weighted\" NSE ($\\small\\text{wNSE}$)\n",
+    " > - The distinction is subtle, essentially: $\\small\\text{WMSE}$ treats 0 weights as data to *exclude*; additionally it requires that the *weights sum to 1*.\n",
+    " > - Whereas $\\small\\text{MWSE}$ (what `scores` does), treats 0 weights as data that is *zero forced* and has no constraints on the upper bound of the *weights* (at the time of writing).\n",
+    " > - Incidentally $\\small\\text{MWSE}$ is also what is needed to compute a \"weighted\" NSE ($\\small\\text{wNSE}$).\n",
     "\n",
     "Further, while $i$ above is shown as a integer index from 0 to n, its definition can be abstracted to any _multi-index_ i.e.\n",
     "\n",
     "$\\vec{i} \\in \\{ \\left(\\ i_0,\\ i_1,\\ ...\\ \\right) :\\  0\\leq i_0 \\lt N_0;\\ 0\\leq i_1 \\lt N_1; \\ ...\\ \\}$\n",
     "\n",
-    "If one wishes to accumulate the NSE scores over multiple indices, the `reduce_dims` and `preserve_dims` arguments can be used (similar to other scores)\n",
+    "If one wishes to accumulate the NSE scores over multiple indices, the `reduce_dims` and `preserve_dims` arguments can be used (similar to other scores).\n",
     "\n",
     "## Interpretation\n",
     "\n",
@@ -163,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 3: Angular and array"
+    "### Example 3: Angular and Array"
    ]
   },
   {
@@ -191,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 4: Weight and array"
+    "### Example 4: Weight and Array"
    ]
   },
   {
@@ -220,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 5: 2D Array: time and station"
+    "### Example 5: 2D Array: Time and Station"
    ]
   },
   {
@@ -795,7 +796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 7: 3D Array: Time, Station and lead times"
+    "### Example 7: 3D Array: Time, Station and Lead-time"
    ]
   },
   {
@@ -875,7 +876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NSE Calculation along Lead time\n",
+    "#### NSE Calculation along Lead-time\n",
     "\n",
     "So far we've been only passing a string to `reduce_dims`, as mentioned in the introduction of this tutorial, the indexers can span multiple dimensions. Suppose we would like to find NSE for each lead time, we simply need to pass `reduce_dims=(\"station\", \"time\")` alternatively, `preserve_dims=\"lead_time\"` should also work. Before doing so, we need to broadcast the two arrays prior to computations. Normally, this will happen automatically - but fill it with NaNs when broadcasted."
    ]
@@ -980,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Proper broadcasting\n",
+    "#### Proper Broadcasting\n",
     "\n",
     "The reason this happens is because of the strict coordinate defintions. To circumvent this we actually need to use numpy's broadcast method, so that we are dealing with an attribute-less data-array. Since `nse` relies on `mse` for performing any computations under-the-hood, where the latter relies on using `xarray` for computational API calls rather than `numpy`. If we do want to mimic `numpy`'s method we just have to use `numpy` to call broadcast instead.\n",
     "\n",
@@ -988,7 +989,7 @@
     ">\n",
     "> Using numpy for broadcasting will almost certainly load everything to memory. However, unlike `xarray` which relies on merge strategies, numpy basically repeats data if the dimensions are compatible.\n",
     ">\n",
-    "> In any case - broadcasting is not always trivial - especially for large datasets, and `nse` (and by extension `mse`) in particular do not guarentee broadcasted operations, instead they trim the operations to coordinates that are compatible\n"
+    "> In any case - broadcasting is not always trivial - especially for large datasets. In particular, `nse` (and by extension `mse`) do not guarentee operations are broadcasted to variables and dimensions that do not match between the `obs`, `fcst` and optionally `weights` arguments. Instead, they trim the operations to coordinates that are compatible. This is _intentional_, as there is no obvious default broadcasting option (both broadcasting by `nan`-filling and broadcasting using vectorisation (or replication) are viable for different scenarios).\n"
    ]
   },
   {
@@ -1155,7 +1156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Is `nse` causing the quirky broadcasting or is it `mse`??\n",
+    "**Is `nse` causing the quirky broadcasting or is it `mse`?**\n<br>",
     "\n",
     "_(spoiler: neither)_\n",
     "\n",
@@ -1396,7 +1397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise for the reader\n",
+    "### Exercise for the Reader\n",
     "\n",
     "The above can also be done using `xarrays`'s `map_blocks` or `apply_ufunc` methods - which may reduce the load on memory further by using `dask` to partition and compute chunks more efficiently.\n",
     "\n",
@@ -1412,15 +1413,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Other things to try\n",
+    "## Other Things to Try\n",
     "\n",
     "There are several variants of NSE that are useful for particular applications, see: https://en.wikipedia.org/wiki/Nash%E2%80%93Sutcliffe_model_efficiency_coefficient\n",
     "- Scores currently supports the use of `weights`. This allows the user to calculate `wNSE`, which is typically scaled by the `obs` itself. See: [Hundecha and Bárdossy (2004)](https://doi.org/10.1016/j.jhydrol.2004.01.002).\n",
     "- `weights` can also be used as \"selectors\" by specifying binary values (in this case `1 => include datum` or `np.nan => exclude datum`. This is useful for slicing hydrographs by their observation values and accumulating over the resultant extents.\n",
-    "- `NNSE` a variant of NSE that works with machine learning optimisation functions\n",
+    "- `NNSE` a variant of NSE that works with machine learning optimisation functions.\n",
     "- `LNSE` logarithmic processing of observation and forecasts *prior* to computing NSE for better representation of smaller values.\n",
     "\n",
-    "Most of the above can be done via by preprocessing the observations/forecast, adapting the final score or scaling by the `weights` input argument."
+    "\n",
+    "Most of the above variations can be computed either by:\n",
+    "- preprocessing the observations/forecast,\n",
+    "- composing the NSE computation with another function,\n",
+    "- or scaling using the `weights` input argument.\n"
    ]
   }
 ],
