[bug] missed backslash

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -37,7 +37,7 @@
     "$$\n",
     "\n",
     "<br>Where:\n",
-    "- $\vec{w} = (w_0, w_1,..., w_n)$ are the weights for each index $i$\n",
+    "- $\\vec{w} = (w_1, w_2,..., w_n)$ are the weights for each index $i$\n",
     "- The weights must be non-negative: $\\forall i \\ : \\ 0 \\leq w_i\\ , \\ \\text{and there exists at least one}\\ \\  i \\ : \\ 0 \\lt w_i$  (specifiable using `weights` option)\n",
     "- $\\sigma_{\\large{o_w}}^2$ is the weighted obs variance\n",
     "- $\\small\\text{MWSE}$ is the mean of the weighted square errors - again this is also equivilent to `scores.continuous.mse`, if using the weights argument\n",
