[tutorial] rejigged sentence

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -989,7 +989,7 @@
     ">\n",
     "> Using numpy for broadcasting will almost certainly load everything to memory. However, unlike `xarray` which relies on merge strategies, numpy basically repeats data if the dimensions are compatible.\n",
     ">\n",
-    "> In any case - broadcasting is not always trivial - especially for large datasets. In particular, `nse` (and by extension `mse`) do not guarantee operations are broadcasted to variables and dimensions that do not match between the `obs`, `fcst` and optionally `weights` arguments. Instead, they trim the operations to coordinates that are compatible. This is _intentional_, as there is no obvious default broadcasting option (both broadcasting by `nan`-filling and broadcasting using vectorisation (or replication) are viable for different scenarios).\n"
+    "> In any case - broadcasting is not always trivial - especially for large datasets. In particular, `nse` (and by extension `mse`) do not guarantee operations are broadcasted between the `obs`, `fcst` and optionally `weights`, if their variables and coordinates/dimensions _do not_ match. Instead, they usually only apply operations to variables and coordinates that _do_ match. This behaviour (inherited from `xarray`) is _intentionally_ left as the default, as there is no obvious alternative broadcasting option (both broadcasting with `nan`s and broadcasting using vectorisation - or replication - are viable for different scenarios).\n"
    ]
   },
   {
